templates/network-poilcy2.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-frontend
  namespace: flask
spec:
  podSelector:
    matchLabels:
      app: flask
  ingress:
    - from:
        - podSelector:
            matchLabels:
              role: frontend
  policyTypes:
    - Ingress
