templates/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-only-internal
  namespace: flask
spec:
  podSelector:
    matchLabels:
      app: flask
  ingress:
  - from:
    - podSelector: {}
  policyTypes:
  - Ingress
