templates/network-policy3.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-only-https
  namespace: flask
spec:
  podSelector:
    matchLabels:
      app: flask
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - protocol: TCP
          port: 443
  policyTypes:
    - Egress
