templates/network-policy4.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns
  namespace: flask
spec:
  podSelector:
    matchLabels:
      app: flask
  egress:
    - to:
        - namespaceSelector: {}
      ports:
        - protocol: UDP
          port: 53
  policyTypes:
    - Egress
